Tue Sep 18 11:29:26 BST 2007  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po4a.cfg: Add po4a mechanism for manual page translation,
	  as the Simplified Chinese translator would like to use this.
	* man/po4a/po/man-db.pot: Add generated file.

	* man/man1/apropos.man1, man/man1/lexgrog.man1, man/man1/man.man1,
	  man/man1/manconv.man1, man/man1/manpath.man1,
	  man/man1/whatis.man1, man/man1/zsoelim.man1,
	  man/man5/manpath.man5, man/man8/accessdb.man8,
	  man/man8/catman.man8, man/man8/mandb.man8: Some strings should not
	  be translated. Use the ".if !'po4a'hide'" idiom to mark them.
	* man/man1/man.man1 (OVERVIEW): Adjust some spacing.

Tue Sep 18 08:59:55 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (directory_table): Switch Simplified Chinese to
	  GBK by default. Ming Hua points out that GBK is a superset of
	  EUC-CN, and indeed all Simplified Chinese manual pages I can find
	  can be recoded from GBK without hassle. I'm less certain about
	  changing the output encoding, but for CJK encodings it's best for
	  these to be the same at the moment.

Mon Sep 17 16:13:37 BST 2007  Daniel Nylander  <po@danielnylander.se>

	* po/sv.po: Update from Translation Project.

Mon Sep 17 14:27:15 BST 2007  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Mon Sep 17 00:34:17 UTC 2007  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l (ja_name): Oops; make the first translation keep
	  working!

Mon Sep 17 00:26:27 UTC 2007  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l (ja_name): Add another possible translation.

Mon Sep 17 00:11:38 UTC 2007  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_start): Break after execvp, otherwise we
	  segfault if execvp fails.

Sun Sep 16 23:15:27 BST 2007  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.0-pre2.
	* man-db.lsm (Keywords): Add manconv.

Sun Sep 16 20:41:36 BST 2007  Colin Watson  <cjwatson@debian.org>
